file(GLOB list ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
message(STATUS "add executable: ${list}")
foreach(cpp IN LISTS list)
  get_filename_component(base_name ${cpp} NAME_WLE)
  message(${base_name})
  add_executable(${base_name} ${cpp})
  target_link_libraries(${base_name} PUBLIC MKL::MKL)
  set_target_properties(${base_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
endforeach()